# finetuningtraining

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-mlx.txt  requirements-test.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: __init__.py  config_loader.py  main.py  models.py  uploads.py
app/audit/: __init__.py  logging.py
app/auth/: __init__.py  jwt.py  middleware.py
app/data_forge/: __init__.py  chunk_filter.py  chunker.py  dataset_builder.py  ingest.py  pair_synthesis.py  qa_synthesis.py
app/data_forge/ocr/: __init__.py  base.py  docling_engine.py  paddleocr_engine.py  pipeline.py  rapidocr_engine.py  tesseract_engine.py  trocr_engine.py
app/data_forge/parsers/: __init__.py  docx.py  html.py  image.py  pdf.py  pptx.py  txt.py  xlsx.py
app/eval/: __init__.py  judge.py  runner.py  scorer.py
app/hardware/: __init__.py  detect.py  profiles.py
app/harvesters/: __init__.py  arxiv.py  code.py  youtube.py
app/inference/: __init__.py  canary.py  hf_backend.py  llamacpp_backend.py  manager.py  mlx_backend.py  ollama_backend.py  sglang_backend.py  vllm_backend.py
app/inference/cache/: __init__.py  kv_cache.py  prefix_cache.py
app/multimodal/: __init__.py  chunking.py  embeddings.py  pipeline.py  processors.py  production_stores.py  providers.py  rag.py  schemas.py  vector_store.py
app/observability/: __init__.py  cost.py  slo.py
app/persistence/: __init__.py  postgres.py  store.py
app/pipeline/: __init__.py  runner.py  stages.py
app/providers/: __init__.py  base.py  ollama.py  openai_compat.py
app/rag/: __init__.py  corpus.py  prompts.py  retriever.py
app/registry/: __init__.py  model_registry.py  schemas.py
app/security/: __init__.py  cors.py  paths.py
app/templates/: __init__.py  alpaca.py  base.py  chatml.py  deepseek.py  gemma.py  llama.py  mistral.py  phi.py  qwen.py  registry.py  sharegpt.py
app/trainers/: __init__.py  backends.py  base.py  callbacks.py  dpo_trainer.py  export.py  grpo_trainer.py  hub.py  kto_trainer.py  orpo_trainer.py  reward_signals.py  sft_trainer.py
configs/domains/: _template.yaml  ai_llm_test.yaml
configs/domains/examples/: ai_llm.yaml  asset_integrity.yaml  customer_grasps.yaml
configs/hardware/: brev_a100.yaml  brev_a10g.yaml  colab_t4.yaml  m4_pro.yaml  rtx_4090.yaml  rtx_5090.yaml
configs/models/: model_catalog.yaml
docs/: ARCHITECTURE_AND_ROADMAP.md  BLUEPRINT_ADOPTION_GUIDE.md  BLUEPRINT_EXECUTION_BACKLOG.md  DEPLOY_APPRUNNER.md  MULTIMODAL_PIPELINE.md  SETUP.md  SPRINTS.md
docs/specs/: _TEMPLATE.md  data_forge_v2_harvesters_and_code.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  docs.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: Chat.tsx  ChatWidget.tsx  DataForge.tsx  DocsSidebar.tsx  Domains.tsx  Health.tsx  Multimodal.tsx  Train.tsx  TrainingChart.tsx
frontend/src/hooks/: useApi.ts
infra/: apprunner-deploy.sh
notebooks/: 01_data_forge_demo.ipynb  02_sft_qwen_alpaca.ipynb  03_dpo_llama3_identity.ipynb  04_grpo_math_reasoning.ipynb
scripts/: batch_pipeline.py  build_cto_dataset.py  export_gguf.py  install.sh  install_llamacpp.sh  multimodal_course_demo.py  new_domain.py  preflight.py  run_studio.sh
tests/: test_arxiv_harvester.py  test_attn_impl_resolution.py  test_audit_logging.py  test_auth_jwt.py  test_batch_pipeline.py  test_canary_routing.py  test_chunk_filter.py  test_code_harvester.py  test_cors_config.py  test_data_forge_chunker.py  test_eval.py  test_export_gguf.py  test_hardware.py  test_hub_push.py  test_inference_ollama_backend.py  test_loss_history_callback.py  test_model_registry.py  test_multimodal_api.py  test_multimodal_pipeline.py  test_observability.py  test_pair_synthesis.py  test_path_validator.py  test_persistence.py  test_persistence_postgres.py  test_providers_ollama.py  test_providers_registry.py  test_qa_synth_filters.py  test_rag.py  test_sft_config_compat.py  test_spa_serving.py  test_templates.py  test_tenant_isolation.py  test_trainer_hf_dataset_loading.py  test_uploads.py  test_youtube_harvester.py
ui/: studio.py
