[project]
name = "valonylabs-studio"
version = "3.0.0"
description = "Agnostic local post-training + inference studio (Mac / RTX / Colab / Brev)"
requires-python = ">=3.10,<3.13"
readme = "README.md"

# Core deps that install everywhere (no torch flavour assumed).
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "requests>=2.31",
    "rank_bm25>=0.2.2",
    "yt-dlp>=2024.12",
    "youtube-transcript-api>=0.6",
    "rich>=13.7",
    "typer>=0.12",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "transformers>=4.44",
    "accelerate>=0.30",
    "peft>=0.11",
    "trl>=0.12",
    "sentencepiece>=0.2",
    "tiktoken>=0.7",
    "safetensors>=0.4",
    "pyjwt>=2.8",                # A6a JWT auth

    # Frontend is React/TS (see frontend/). No Python UI deps.
    # Data Forge core
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "chardet>=5.2",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "pillow>=10.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
cuda = [
    "bitsandbytes>=0.43",
    "vllm>=0.6.0",
    "flash-attn>=2.6 ; sys_platform == 'linux'",
    "unsloth>=2024.9 ; sys_platform == 'linux'",
    "xformers>=0.0.27 ; sys_platform == 'linux'",
    "rapidocr-onnxruntime>=1.3",
    "paddleocr>=2.7 ; sys_platform == 'linux'",
    "docling>=1.8 ; sys_platform == 'linux'",
]
mlx = [
    "mlx>=0.16 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.18 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "rapidocr-onnxruntime>=1.3",
]
sglang = [
    "sglang[all]>=0.3.0 ; sys_platform == 'linux'",
]
cpu = [
    "llama-cpp-python>=0.2.90",
    "rapidocr-onnxruntime>=1.3",
    "pytesseract>=0.3.10",
]
postgres = [                       # A6b production-profile persistence
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# `auto` mode so pytest-asyncio picks up every `async def test_*` without
# each test having to carry an explicit `@pytest.mark.asyncio` decorator —
# and the tests that DO carry one still work.
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
